# multiplier

./: .gitattributes  .gitignore  .~lock.llm_judge_results.csv#  README.md  agent.py  app.py  config.py  crag.py  database.py  docker-compose.yml  latency_results.csv  llm_judge_results.csv  pyproject.toml  ragas_results.csv  retrieval.py  router.py  seed.ipynb
.github/workflows/: test.yml
chroma_db_h2econs/: chroma.sqlite3
chroma_db_h2econs/13592fbf-ef06-4d5c-86ad-699ade2d4121/: index_metadata.pickle
data/: h2_economics_library.db
data/chroma_db_h2econs/: chroma.sqlite3
docker/: Dockerfile  docker-compose.yml
docs/: CLOUDGUIDE.md  README.md  TASKS.md
eval/: eval.csv  rag_evaluation.py
rag_env/: pyvenv.cfg
results/multi-hyde-10>5doc-rerank/: latency_results.csv  llm_judge_results.csv  ragas_results.csv
results/multi-hyde-5doc/: latency_results.csv  llm_judge_results.csv  ragas_results.csv
results/multi-hyde-5doc-JINArerank/: .~lock.llm_judge_results.csv#  latency_results.csv  llm_judge_results.csv  ragas_results.csv
results/multi-hyde-5doc-rerank-crag/: latency_results.csv  llm_judge_results.csv  ragas_results.csv
results/parametric/: latency_results.csv  llm_judge_results.csv  ragas_results.csv
src/: agent.py  config.py  crag.py  database.py  retrieval.py  router.py
tests/: test_routes.py
