[project]
name = "econs-data"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "chromadb>=1.5.0",
    "bs4>=0.0.2",
    "duckduckgo-search>=7.0.0",
    "ipykernel>=6.29.5",
    "langchain>=0.3.0",
    "langchain-chroma>=1.1.0",
    "langchain-community>=0.4.1",
    "langchain-chroma>=1.1.0",
    "langchain-community>=0.4.1",
    "langgraph>=0.4.0",
    "sqlalchemy>=2.0.46",
    "sqlalchemy-orm>=1.2.10",
    "sqlalchemy-ext>=0.2",
    "streamlit>=1.40.0",
    "langchain-openai>=1.1.9",
    "bm25>=1.0.0",
    "ragas>=0.4.3",
    "openai>=2.21.0",
    "tiktoken>=0.12.0",
    "rank-bm25>=0.2.2",
    "datasets>=4.5.0",
    "ddgs>=9.10.0",
]
